minify the footer JS and fix a z-index in the navbar

--- a/src/scss/modules/_navbar.scss
+++ b/src/scss/modules/_navbar.scss
@@ -29,6 +29,7 @@
           position: absolute;
           left: 0;
           width: 150%;
+          z-index: 1;
 
           a {
             display: block;
